add new dependency add likes for response add validations for count remove unnecessary code